 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.6 Changelog

6.6.0 Beta 7
============
* [DanielPharos]: Added support for new Steam game file layout (using the 'common' directory).

* [DanielPharos]: Added brushDef2 and brushDef3 saving support.

* [DanielPharos]: Many fixes for .m32 texture saving. It will now produce something that at least
          - has a chance of working...

* [DanielPharos]: Generate proper error if something went wrong trying to save files, instead of
          - always displaying a message about "save" not being supported.

* [DanielPharos]: Workaround for another unexpected Windows Registry key or value problem in the
          - video hardware enumeration.

* [DanielPharos]: Fixed a long-standing bug that could cause a runtime error on startup when
          - enumerating the video hardware and display settings.

* [DanielPharos]: Added detection of corrupt AMD driver registry key.

* [DanielPharos]: Added the GDI workaround to OpenGL. This fixes the drawing of GDI on OpenGL views
          - on more modern Windows machines.

* [DanielPharos]: Brought back the fullscreen view window! Also, added a toolbar that allows you to
          - select the renderer to use for new windows. (Work in progress.) Added an experimental
          - fancy fullscreen mode, with a tight-ish message pump.

* [DanielPharos]: Added mousewheel scrolling support in the 2D views.

* [DanielPharos]: Fixed texture positioning tool causing the treeview panel to partially disappear.

* [DanielPharos]: Unwrap texture coordinates on .map export. This allows .bsp compilers to
          - merge texinfo structures, to avoid hitting the "too many surfaces" limit too soon.
